--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,19 @@
 .envrc
 .mypy_cache/
 __pycache__/
+*.pyc
+.venv/
+.vscode/
+
+#python gitignore
+*.pyo
+*.pyd
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.pyw
+*.pyz
+*.pywz
+*.pyzw
+*.ipynb_checkpoints/
