--- a/backend/login_register/Dockerfile
+++ b/backend/login_register/Dockerfile
@@ -11,7 +11,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the content of the local src directory to the working directory
-COPY . .
+COPY fast.py .
 
 # Command to run the application
 CMD ["uvicorn", "fast:app", "--host", "0.0.0.0", "--port", "5000"]
