--- a/app/databases/api/.env.example
+++ b/app/databases/api/.env.example
@@ -1,2 +1,8 @@
-MONGO_URI = "mongodb://mongodb:27017"
-MONGO_DBNAME = "ecommerce-app"
+MONGO_URI = ""
+MONGO_DATABASE = ""
+
+POSTGRES_USER = ""
+POSTGRES_PASSWORD = ""
+POSTGRES_DATABASE = ""
+POSTGRES_HOST = ""
+POSTGRES_PORT = ""
