--- a/app/controllers/admin/add_product/docker-compose.yml
+++ b/app/controllers/admin/add_product/docker-compose.yml
@@ -6,7 +6,7 @@
       ports:
         - "8002:8002"
       volumes:
-      - /home/bb/systemy_rozproszone/app/controllers/admin:/products
+      - ${PWD}:/products
       networks:
         - databases_external_db_api
 
