--- a/app/controllers/admin/magazyn/docker-compose.yml
+++ b/app/controllers/admin/magazyn/docker-compose.yml
@@ -1,13 +1,15 @@
-  version: '3.8'
+version: '3.8'
 
-  services:
-    magazyn_stan:
-      image: magazyn_stan
-      ports:
-        - "8005:8005"
-      networks:
-        - databases_external_db_api
+services:
+  magazyn_stan:
+    build:  # Add the build configuration
+      context: .  # Use the current directory as the build context
+      dockerfile: Dockerfile  # Specify the Dockerfile to use
+    ports:
+      - "8005:8005"
+    networks:
+      - databases_external_db_api
 
-  networks:
-    databases_external_db_api:
-      external: true
+networks:
+  databases_external_db_api:
+    external: true
