--- a/app/frontend/docker-compose.yml
+++ b/app/frontend/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services:
   frontend:
-    image: streamlit_frontend_progress
+    build:  # Add the build configuration
+      context: .  # Use the current directory as the build context
+      dockerfile: Dockerfile  # Specify the Dockerfile to use
     ports:
       - "8501:8501"
     volumes:
