--- a/app/databases/api/Dockerfile
+++ b/app/databases/api/Dockerfile
@@ -9,6 +9,8 @@ ENV PYTHONDONTWRITEBYTECODE=1
 # Turns off buffering for easier container logging
 ENV PYTHONUNBUFFERED=1
 
+RUN apt-get update -y && apt-get install -y gcc
+
 # Install pip requirements
 COPY requirements.txt .
 RUN python -m pip install -r requirements.txt
