--- a/app/databases/docker-compose.yml
+++ b/app/databases/docker-compose.yml
@@ -34,7 +34,19 @@ services:
       - mongodb_data:/data/db
     networks:
       - internal_network
-
+  qdrant:
+    image: qdrant/qdrant
+    container_name: qdrant
+    volumes:
+      - .qdrant/qdrant_data:/qdrant/storage
+      - .qdrant/qdrant_snapshots/:/snapshots
+    environment:
+      QDRANT__STORAGE__SNAPSHOT_PATH: /snapshots
+      QDRANT__TELEMETRY_DISABLED: 'true'
+    ports:
+      - "6333:6333"
+    networks:
+      - internal_network
 volumes:
   postgres_data:
   mongodb_data:
