Reduce size of containers, removed redundant SenteceTransformes

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__/
 .vscode/
 app/processes/chatbot/model/
 app/databases/qdrant/qdrant_data/
+app/databases/init/model/
 #python gitignore
 *.pyo
 *.pyd
