--- a/app/processes/chatbot/requirements.txt
+++ b/app/processes/chatbot/requirements.txt
@@ -1,105 +1,5 @@
-aiohttp==3.9.5
-aiosignal==1.3.1
-annotated-types==0.6.0
-anyio==4.3.0
-appnope==0.1.4
-asttokens==2.4.1
-async-timeout==4.0.3
-attrs==23.2.0
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-comm==0.2.2
-debugpy==1.6.7
-decorator==5.1.1
-dnspython==2.6.1
-exceptiongroup==1.2.0
-executing==2.0.1
 fastapi==0.110.3
-filelock==3.14.0
-frozenlist==1.4.1
-fsspec==2024.5.0
-greenlet==3.0.3
-grpcio==1.64.0
-grpcio-tools==1.64.0
-gunicorn==22.0.0
-h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
-httpcore==1.0.5
-httpx==0.27.0
-huggingface-hub==0.23.2
-hyperframe==6.0.1
-idna==3.7
-importlib_metadata==7.1.0
-ipykernel==6.29.3
-ipython==8.22.2
-jedi==0.19.1
-Jinja2==3.1.4
-joblib==1.4.2
-jupyter_client==8.6.1
-jupyter_core==5.5.0
-MarkupSafe==2.1.5
-matplotlib-inline==0.1.7
-mpmath==1.3.0
-multidict==6.0.5
-mypy==1.10.0
-mypy-extensions==1.0.0
-nanoid==2.0.0
-nest-asyncio==1.6.0
-networkx==3.3
-numpy==1.26.4
-packaging==24.0
-pandas==2.2.2
-parso==0.8.4
-pexpect==4.9.0
-pickleshare==0.7.5
-pillow==10.3.0
-platformdirs==4.2.1
-portalocker==2.8.2
-prompt-toolkit==3.0.42
-protobuf==5.27.0
-psutil==5.9.8
-psycopg2-binary==2.9.9
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pydantic==2.7.1
-pydantic_core==2.18.2
-Pygments==2.18.0
-pymongo==4.7.1
-python-dateutil==2.9.0
-python-dotenv==1.0.1
-python-multipart==0.0.9
-pytz==2024.1
-PyYAML==6.0.1
-pyzmq==25.1.2
-qdrant-client==1.9.1
-regex==2024.5.15
-requests==2.31.0
-safetensors==0.4.3
-scikit-learn==1.5.0
-scipy==1.13.1
-sentence-transformers==3.0.0
-six==1.16.0
-sniffio==1.3.1
-SQLAlchemy==2.0.29
-sqlmodel==0.0.18
-stack-data==0.6.2
-starlette==0.37.2
-sympy==1.12.1
-threadpoolctl==3.5.0
-tokenizers==0.19.1
-tomli==2.0.1
-torch==2.3.0
-tornado==6.3.3
-tqdm==4.66.4
-traitlets==5.14.3
-transformers==4.41.2
-typing_extensions==4.11.0
-tzdata==2024.1
+aiohttp
 urllib3==2.2.1
 uvicorn==0.29.0
-wcwidth==0.2.13
-yarl==1.9.4
-zipp==3.17.0
 openai==1.30.5
