--- a/app/controllers/customer/send_order/docker-compose.yml
+++ b/app/controllers/customer/send_order/docker-compose.yml
@@ -8,7 +8,7 @@
       ports:
         - "8006:8006"
       volumes:
-      - ${PWD}:/send_order
+        - .:/send_order
       networks:
         - databases_external_db_api
 
