api key in .env

--- a/app/processes/chatbot/docker-compose.yml
+++ b/app/processes/chatbot/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - "8009:8009"
     networks:
       - databases_external_db_api
+    env_file:
+      - .env
 
 networks:
   databases_external_db_api:
